# venum_tds_transrich

./: Cargo.toml  README.md
.cargo/: config.toml
resources/: jsonconf_example.json
src/: container.rs  container_transrich_pass.rs  errors.rs  item_datacell.rs  lib.rs  ordering.rs  splitting.rs  value.rs  value_splitting.rs  venum_entry_container_mut.rs  venum_splitting.rs
src/conf/: from_jsonconf.rs  jsonconf.rs  mod.rs
src/traits/: container.rs  item.rs  mod.rs  shared.rs  value.rs
